--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-HOLA
+
+module.exports = {
+    holaMundo: function() {
+        console.log('Hola Mundo!');
+    },
+    holaPersonalizado: function(nombre) {
+        if (nombre) {
+             console.log(`Hola ${ nombre }`);
+             return;
+        }
+        console.log('Hola, ¿Hay alguien ahí?')
+    }
+}
+
+
+
+
+
+
